--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "dev-turbo": "next dev --turbo",
     "build": "next build",
     "build-turbo": "next build --turbo",
@@ -12,17 +12,22 @@
   },
   "dependencies": {
     "@types/node": "20.4.5",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "antd": "^5.16.0",
     "autoprefixer": "10.4.14",
+    "cookie": "^1.0.1",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "^13.5.6",
+    "eslint-config-next": "15.0.1",
+    "next": "15.0.1",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
