--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/react": "^0.20.0",
     "@types/node": "20.4.5",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
@@ -17,6 +18,7 @@
     "cookie": "^1.0.1",
     "eslint": "8.46.0",
     "eslint-config-next": "15.0.1",
+    "lexical": "^0.20.0",
     "next": "15.0.1",
     "openai": "^4.71.1",
     "postcss": "8.4.27",
