--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
   },
   "dependencies": {
     "@lexical/react": "^0.20.0",
-    "@types/node": "20.4.5",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.14",
     "cookie": "^1.0.1",
     "eslint": "8.46.0",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "15.2.4",
     "lexical": "^0.20.0",
-    "next": "15.1.0",
+    "next": "15.2.4",
     "openai": "^4.71.1",
     "postcss": "8.4.27",
     "react": "19.0.0",
@@ -28,7 +25,15 @@
     "typescript": "5.1.6"
   },
   "overrides": {
+    "@types/node": "20.4.5",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2"
+  },
+  "resolutions": {
+    "@types/react": "19.0.12",
+    "@types/react-dom": "19.0.4"
+  },
+  "devDependencies": {
+    "@types/react": "19.0.12"
   }
 }
