--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
   },
   "dependencies": {
     "@lexical/react": "^0.20.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.1",
     "eslint": "8.46.0",
     "eslint-config-next": "15.2.4",
     "lexical": "^0.20.0",
+    "lucide-react": "^0.485.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "openai": "^4.71.1",
     "postcss": "8.4.27",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6"
-  },
-  "overrides": {
-    "@types/node": "20.4.5",
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2"
   },
   "resolutions": {
     "@types/react": "19.0.12",
