--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie": "^1.0.1",
     "eslint": "8.46.0",
     "eslint-config-next": "15.2.4",
+    "framer-motion": "^12.6.3",
     "lexical": "^0.20.0",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
