--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@lexical/react": "^0.20.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -21,7 +22,6 @@
     "eslint-config-next": "15.2.4",
     "framer-motion": "^12.6.3",
     "lexical": "^0.20.0",
-    "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "openai": "^4.71.1",
